[gd_scene load_steps=29 format=2]

[ext_resource path="res://characters/character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/character/input/AIInputController.gd" type="Script" id=2]
[ext_resource path="res://characters/character/states/IdleState.gd" type="Script" id=3]
[ext_resource path="res://characters/player/textures/PLACERHOLDER_player_sheet.png" type="Texture" id=4]
[ext_resource path="res://characters/character/states/move/MoveState.gd" type="Script" id=5]
[ext_resource path="res://characters/character/states/move/DashState.gd" type="Script" id=6]
[ext_resource path="res://characters/character/states/jump/WallJumpState.gd" type="Script" id=7]
[ext_resource path="res://characters/character/states/jump/JumpState.gd" type="Script" id=8]
[ext_resource path="res://characters/character/states/jump/FallState.gd" type="Script" id=9]
[ext_resource path="res://characters/player/Player.gd" type="Script" id=10]
[ext_resource path="res://characters/character/ai/base/IdleAI.gd" type="Script" id=11]
[ext_resource path="res://characters/character/ai/base/RoamAI.gd" type="Script" id=12]
[ext_resource path="res://characters/character/ai/base/FollowAI.gd" type="Script" id=14]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0
height = 15.0

[sub_resource type="Animation" id=2]
resource_name = "dash_end"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 73, 75 ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 69, 72 ]
}

[sub_resource type="Animation" id=4]

[sub_resource type="Animation" id=5]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 46, 47, 48 ]
}

[sub_resource type="Animation" id=6]
length = 1.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.45, 0.65, 0.85, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=7]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 41, 42, 43 ]
}

[sub_resource type="Animation" id=8]
resource_name = "reset_pose"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7.5, -21 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6, 13 ]
}

[sub_resource type="Animation" id=10]

[sub_resource type="Animation" id=11]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 60, 62 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, -20 ) ]
}

[sub_resource type="RayShape2D" id=12]
length = 10.0

[sub_resource type="RayShape2D" id=13]
length = 46.6239

[sub_resource type="RayShape2D" id=14]
length = 29.922

[sub_resource type="CircleShape2D" id=15]
radius = 170.0

[node name="ExampleEnemy" instance=ExtResource( 1 )]
script = ExtResource( 10 )
dash_acquired = true
double_jump_acquired = true
wall_climb_acquired = true

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 4 )
offset = Vector2( 12, -20 )
hframes = 6
vframes = 17
frame = 60

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, -16.5 )
shape = SubResource( 1 )

[node name="InteractionRay" parent="." index="2"]
visible = false
position = Vector2( 0, -16 )

[node name="AnimationPlayer" parent="." index="3"]
anims/dash_end = SubResource( 2 )
anims/dash_travel = SubResource( 3 )
anims/death = SubResource( 4 )
anims/fall = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/jump = SubResource( 7 )
anims/reset_pose = SubResource( 8 )
anims/run = SubResource( 9 )
anims/slide = SubResource( 10 )
anims/wall_slide = SubResource( 11 )

[node name="InputController" parent="." index="4"]
script = ExtResource( 2 )

[node name="IdleAI" type="Node" parent="InputController" index="0"]
script = ExtResource( 11 )
idling_max_time = 2

[node name="FollowAI" type="Node" parent="InputController" index="1"]
script = ExtResource( 14 )

[node name="RoamAI" type="Node" parent="InputController" index="2"]
script = ExtResource( 12 )
roaming_max_time = 2

[node name="IdleState" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 3 )
host_path = NodePath("../..")
animation_name = "idle"
move_speed = 0.0
move_damping = 0.8

[node name="Jump" type="Node" parent="StateMachine" index="1"]

[node name="JumpState" type="Node" parent="StateMachine/Jump" index="0"]
script = ExtResource( 8 )
animation_name = "jump"
move_speed = 90.0
move_damping = 0.8
max_jump_height = 80.0
min_jump_height = 15.0

[node name="FallState" type="Node" parent="StateMachine/Jump" index="1"]
script = ExtResource( 9 )
animation_name = "fall"
move_speed = 90.0
move_damping = 0.8
land_state_path = NodePath("../../../../Player/StateMachine/Jump/LandState")

[node name="WallJumpState" type="Node" parent="StateMachine/Jump" index="2"]
script = ExtResource( 7 )
animation_name = "wall_slide"

[node name="Move" type="Node" parent="StateMachine" index="2"]

[node name="MoveState" type="Node" parent="StateMachine/Move" index="0"]
script = ExtResource( 5 )
animation_name = "run"
move_speed = 90.0
move_damping = 0.8
turn_state_path = NodePath("../../../../Player/StateMachine/Move/TurnState")

[node name="DashState" type="Node" parent="StateMachine/Move" index="1"]
script = ExtResource( 6 )
animation_name = "dash_travel"
move_speed = 90.0
move_damping = 0.2
ground_dash_end_damping = 0.9

[node name="WallClimbAssistantTop" type="Area2D" parent="." index="6"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallClimbAssistantTop" index="0"]
position = Vector2( 0, -33 )
rotation = 4.71239
shape = SubResource( 12 )

[node name="WallClimbAssistantBottom" type="Area2D" parent="." index="7"]
collision_layer = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WallClimbAssistantBottom" index="0"]
position = Vector2( 0, -5 )
rotation = 4.71239
shape = SubResource( 12 )

[node name="EdgeCollider" type="Area2D" parent="." index="8"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EdgeCollider" index="0"]
position = Vector2( 0, -32.8949 )
rotation = -0.785398
shape = SubResource( 13 )

[node name="WallCollider" type="Area2D" parent="." index="9"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallCollider" index="0"]
position = Vector2( 0, -18.133 )
rotation = -1.5708
shape = SubResource( 14 )

[node name="Perception" type="Area2D" parent="." index="10"]
position = Vector2( 0, -17 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perception" index="0"]
shape = SubResource( 15 )
